CMAKE_MINIMUM_REQUIRED(VERSION 3.14.0)
PROJECT(Implement LANGUAGES CXX)

######################################################
###################### SETTINGS ######################
######################################################
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -fopenmp -DNDEBUG")
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_PREFIX_PATH ${CONDA_PREFIX} ${CMAKE_PREFIX_PATH})

FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem thread serialization program_options)
FIND_PACKAGE(CGAL REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED PATHS ${CONDA_PREFIX}/include/eigen3)
FIND_PACKAGE(spdlog REQUIRED)

ADD_SUBDIRECTORY(utility)

INCLUDE_DIRECTORIES(
    inc                 # 上层头文件路径
    ${SUB_INCLUDE_DIR}  # 下级头文件目录
)
INCLUDE_DIRECTORIES(BEFORE ${EIGEN3_INCLUDE_DIR})

AUX_SOURCE_DIRECTORY(.          SRC_LIST)
AUX_SOURCE_DIRECTORY(src        SRC_LIST)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Boost::filesystem Boost::system)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CGAL_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} spdlog::spdlog)

ADD_DEPENDENCIES(${PROJECT_NAME} Utility)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Utility)

